--- a/public/css/app.css
+++ b/public/css/app.css
@@ -726,6 +726,9 @@ select {
 .h-96 {
   height: 24rem;
 }
+.h-14 {
+  height: 3.5rem;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -758,6 +761,9 @@ select {
 }
 .w-96 {
   width: 24rem;
+}
+.w-44 {
+  width: 11rem;
 }
 .max-w-xl {
   max-width: 36rem;
@@ -894,6 +900,10 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
+.border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -922,6 +932,9 @@ select {
 }
 .p-2 {
   padding: 0.5rem;
+}
+.p-5 {
+  padding: 1.25rem;
 }
 .px-4 {
   padding-left: 1rem;
